--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redOrBlack",
+  "name": "RedOrBlack",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,13 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "css-loader": "^1.0.1",
     "register-service-worker": "^1.0.0",
+    "save-dev": "^2.0.0",
+    "scss-loader": "0.0.1",
     "vue": "^2.5.17",
+    "vue-loader": "^15.4.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -27,7 +32,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "lint-staged": "^7.2.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.10.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   },
